--- a/_posts/bible-studies-Viet/John/2023-07-02-John-01-v01-32-Viet.md
+++ b/_posts/bible-studies-Viet/John/2023-07-02-John-01-v01-32-Viet.md
@@ -58,7 +58,7 @@ Bây giờ thì tôi biết nghĩ vậy là không đúng. Vì lẽ thật là c
 
 Nói một cách khác, luật pháp là phương cách tạm thời để dẫn chúng ta đến với Cứu Chúa. Còn Chúa Giê-su Christ là sự hoàn tất của luật pháp, và Ngài cứu chúng ta qua đức tin và bởi lòng thương xót. Chúng ta không còn cần thiết phải làm theo luật pháp để được cứu, mà chỉ đơn thuần nhận lấy món quà không mất tiền mua đó từ nơi Chúa.
 
-Vì sự cứu rỗi là sự ban cho cách nhưng không từ nơi Chúa, thì những điều Ngài ban thêm cho cũng như thế. Việc làm không đóng vai trò gì sau khi chúng ta được cứu, vì nếu được cứu bởi đức tin, thì sống cũng bởi đức tin.
+Vì sự cứu rỗi là sự ban cho cách nhưng không từ nơi Chúa, thì những điều Ngài ban thêm cho cũng như thế. Việc làm không đóng vai trò gì sau khi chúng ta được cứu, vì nếu được cứu bởi đức tin, thì sống cũng bởi đức tin. Đó là ý nghĩa của ***"ơn càng thêm ơn."***
 
 ## LUẬT PHÁP vs. ƠN & LẼ THẬT
 
