--- a/_posts/bible-studies/John/2023-07-02-John-01-v01-32.md
+++ b/_posts/bible-studies/John/2023-07-02-John-01-v01-32.md
@@ -61,7 +61,7 @@ Now I know that's not true. The truth is that we are saved by faith in Jesus Chr
 
 In other words, the law was a temporary measure that pointed to the need for a Savior. Jesus Christ is the fulfillment of the law, and he has saved us by his grace through faith. We don't need to try to earn our salvation by following the law; we can simply receive it as a free gift from God.
 
-Since salvation is an unmerited gift bestowed upon us by God, the same principle applies to all subsequent blessings we receive. Works have no place in our lives after salvation, emphasizing that the righteous are to live by faith.
+Since salvation is an unmerited gift bestowed upon us by God, the same principle applies to all subsequent blessings we receive. Works have no place in our lives after salvation, emphasizing that the righteous are to live by faith. Therefore, it can be said that we receive ***"once gracious gift after another."***
 
 ## LAW vs. GRACE&TRUTH
 
