--- a/_posts/bible-studies/2023-07-02-John.md
+++ b/_posts/bible-studies/2023-07-02-John.md
@@ -28,4 +28,8 @@ comments_locked: false
 
 The key concepts gathered from the study of this passage: In the beginning. A testament to the light. Born by God. Grace and truth. Law vs grace&truth. He has made God known. Jesus revealed.
 
+##  [<u>John 1:33</u>]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-01-v33 %})
+
+The key concepts gathered from the study of this passage: Baptism with the Holy Spirit.
+
 
