--- a/_posts/bible-studies-Viet/2023-07-02-Giang.md
+++ b/_posts/bible-studies-Viet/2023-07-02-Giang.md
@@ -25,4 +25,8 @@ comments_locked: false
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Ban đầu có Ngôi Lời. Làm chứng về sự sáng. Sanh bởi Đức Chúa Trời. Ơn và lẽ thật. Luật pháp vs. ơn & lẽ thật. Đấng giải bày Cha. Ý nghĩa Chúa chịu báp têm.
 
+##  [<u>Giăng 1:33</u>]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-01-v33-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Báp têm bằng Đức Thánh Linh.
+
 
