--- a/_posts/bible-studies-Viet/John/2023-07-02-John-01-v33-Viet.md
+++ b/_posts/bible-studies-Viet/John/2023-07-02-John-01-v33-Viet.md
@@ -28,9 +28,9 @@ comments_locked: false
     <span style="color: rgb(159, 29, 33);"><i>"<sup>33</sup>Về phần ta, ta vốn không biết Ngài; nhưng Ðấng sai ta làm phép báp-tem bằng nước có phán cùng ta rằng: Ðấng mà ngươi sẽ thấy Thánh Linh ngự xuống đậu lên trên, ấy là Ðấng làm <strong>phép báp-tem bằng Ðức Thánh Linh.</strong>.’"</i></span> (John 1:33)<br />Trong lớp Trường Chúa Nhật tuần qua, chúng tôi đã dành trọn thì giờ chỉ để học một câu ngắn gọn. Câu kinh thánh đó đưa đến kết luận là Giăng chỉ làm phép báp têm bằng nước, nhưng Chúa Giê-su sẽ làm <strong><i>phép báp têm bằng Đức Thánh Linh</i></strong>. Chúng ta hãy khởi đầu bằng câu hỏi: Người ta thường hiểu thế nào về sự báp têm bằng Đức Thánh Linh?</p>
 </div>
 
-Có người tin rằng khi một người được báp têm bằng Thánh Linh thì được những ân tứ như nói tiếng lạ, làm những phép lạ, hay có những dấu hiệu có thể mắt thấy tai nghe. Mỗi người phải có trách nhiệm tìm kiếm những điều đó. Mặc dầu những điều này thực có xảy ra trong sách Công Vụ, thánh kình có thực sự khuyên dạy chúng ta tìm kiếm những điều đó không?
+Có người tin rằng khi một người được báp têm bằng Thánh Linh thì được những ân tứ như nói tiếng lạ, làm những phép lạ, hay có những dấu hiệu có thể mắt thấy tai nghe. Mỗi người phải có trách nhiệm tìm kiếm những điều đó. Tôi không tin như vậy, vì mặc dầu những điều này thực có xảy ra trong sách Công Vụ, thánh kinh có thực sự khuyên dạy chúng ta tìm kiếm những điều đó không?
 
-Hầu hết chúng ta tin rằng để được sự sống đời đời, người tín hữu phải được Thánh Linh ngự vào lòng, cũng như A-đam thuở xưa khi được Chúa hà hơi để ông nhận được sự sống từ Chúa. Nếu thực vậy, thì tại sao người tín hữu lại cứ loay hoay đi tìm mình đã có?
+Hầu hết chúng ta tin rằng để được sự sống đời đời, người tín hữu phải được Thánh Linh ngự vào lòng, cũng như A-đam thuở xưa khi được Chúa hà hơi để ông nhận được sự sống từ Chúa. Nếu thực vậy, thì tại sao người tín hữu lại cứ loay hoay đi tìm điều mình đã có?
 
 Chúng ta hãy suy gẫm một số đoạn kinh thánh nói về cách nào Chúa ban cho chúng ta Đức Thánh Linh.
 
