--- a/_posts/bible-studies-Viet/2023-07-02-Giang.md
+++ b/_posts/bible-studies-Viet/2023-07-02-Giang.md
@@ -29,4 +29,8 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Ban 
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Báp têm bằng Đức Thánh Linh.
 
+##  [<u>Giăng 1:34-51</u>]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-01-v34-51-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Chúa biết bạn và tôi.
+
 
