--- a/_posts/bible-studies/2023-07-02-John.md
+++ b/_posts/bible-studies/2023-07-02-John.md
@@ -32,4 +32,8 @@ The key concepts gathered from the study of this passage: In the beginning. A te
 
 The key concepts gathered from the study of this passage: Baptism with the Holy Spirit.
 
+##  [<u>John 1:34-51</u>]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-01-v34-51 %})
+
+The key concepts gathered from the study of this passage: Jesus knows me and you.
+
 
