--- a/_posts/bible-studies-Viet/2023-07-02-Giang.md
+++ b/_posts/bible-studies-Viet/2023-07-02-Giang.md
@@ -33,4 +33,8 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Báp
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Chúa biết bạn và tôi.
 
+##  [<u>Giăng 2:1-25</u>]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-02-v01-25-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Phép lạ thứ nhất. Nhà Cha ta thành nhà buôn bán? Đền thờ của thân thể Chúa. Lời làm chứng của loài người.
+
 
