--- a/_posts/bible-studies/2023-07-02-John.md
+++ b/_posts/bible-studies/2023-07-02-John.md
@@ -36,4 +36,8 @@ The key concepts gathered from the study of this passage: Baptism with the Holy 
 
 The key concepts gathered from the study of this passage: Jesus knows me and you.
 
+##  [<u>John 2:1-25</u>]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-02-v01-25 %})
+
+The key concepts gathered from the study of this passage: Jesus’ first miracle. God’s house as marketplace? Jesus’ body as God’s temple. Man’s testimony.
+
 
