--- a/_posts/bible-studies/2023-07-02-John.md
+++ b/_posts/bible-studies/2023-07-02-John.md
@@ -40,4 +40,8 @@ The key concepts gathered from the study of this passage: Jesus knows me and you
 
 The key concepts gathered from the study of this passage: Jesus’ first miracle. God’s house as marketplace? Jesus’ body as God’s temple. Man’s testimony.
 
+##  [<u>John 3:1-8</u>]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-03-v01-08 %})
+
+The key concepts gathered from the study of this passage: You must be born from above. The effect of the wind.
+
 
