--- a/_posts/bible-studies-Viet/2023-07-02-Giang.md
+++ b/_posts/bible-studies-Viet/2023-07-02-Giang.md
@@ -37,4 +37,8 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Chú
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Phép lạ thứ nhất. Nhà Cha ta thành nhà buôn bán? Đền thờ của thân thể Chúa. Lời làm chứng của loài người.
 
+##  [<u>Giăng 3:1-8</u>]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-03-v01-08-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Các ngươi phải sanh lại. Dấu hiệu của gió.
+
 
