--- a/_posts/bible-studies-Viet/2023-07-02-Giang.md
+++ b/_posts/bible-studies-Viet/2023-07-02-Giang.md
@@ -41,4 +41,8 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Phé
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Các ngươi phải sanh lại. Dấu hiệu của gió.
 
+##  [<u>Giăng 3:9-21</u>]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-03-v09-21-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Việc thuộc về đất/trời. Con rắn treo nơi đồng vắng. Sự đoán xét và cứu rỗi. Đây là sự đoán xét.
+
 
