--- a/_posts/bible-studies/2023-07-02-John.md
+++ b/_posts/bible-studies/2023-07-02-John.md
@@ -44,4 +44,8 @@ The key concepts gathered from the study of this passage: Jesus’ first miracle
 
 The key concepts gathered from the study of this passage: You must be born from above. The effect of the wind.
 
+##  [<u>John 3:9-21</u>]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-03-v09-21 %})
+
+The key concepts gathered from the study of this passage: Earthly and heavenly things. The serpent in the wilderness. Condemnation and salvation. This is the basis for judging.
+
 
