--- a/_posts/bible-studies/2023-07-02-John.md
+++ b/_posts/bible-studies/2023-07-02-John.md
@@ -48,4 +48,8 @@ The key concepts gathered from the study of this passage: You must be born from 
 
 The key concepts gathered from the study of this passage: Earthly and heavenly things. The serpent in the wilderness. Condemnation and salvation. This is the basis for judging.
 
+##  [<u>John 3:22-36</u>]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-03-v22-36 %})
+
+The key concepts gathered from the study of this passage: Ceremonial vs. true washing. I am not the Christ. The word of God. The basis for judging.
+
 
