--- a/_posts/bible-studies-Viet/2023-07-02-Giang.md
+++ b/_posts/bible-studies-Viet/2023-07-02-Giang.md
@@ -45,4 +45,8 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Các
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Việc thuộc về đất/trời. Con rắn treo nơi đồng vắng. Sự đoán xét và cứu rỗi. Đây là sự đoán xét.
 
+##  [<u>Giăng 3:22-36</u>]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-03-v22-36-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Nghi lễ vs sự rửa thật. Không phải ta là Đấng Christ. Lời Đức Chúa Trời. Vì đâu bị phán xét.
+
 
