--- a/_posts/bible-studies-Viet/John/2023-07-02-John-03-v22-36-Viet.md
+++ b/_posts/bible-studies-Viet/John/2023-07-02-John-03-v22-36-Viet.md
@@ -47,7 +47,7 @@ Rốt cuộc, Giăng thấy cần thiết phải hạ mình xuống và nhấn m
 <span style="color: rgb(159, 29, 33);">
 <i><sup>31</sup>Ðấng từ trên cao đến là trên hết mọi loài. Kẻ từ đất đến là thuộc về đất, và nói ra cũng như là thuộc về đất; còn <strong>Ðấng từ trời đến thì trên hết mọi loài</strong>. <sup>32</sup>Ngài làm chứng về điều Ngài đã thấy và nghe; song không có ai nhận lấy lời chứng của Ngài. <sup>33</sup>Ai đã nhận lấy lời chứng của Ngài thì làm chứng chắc rằng Ðức Chúa Trời là thật. <sup>34</sup>Vì <strong>Ðấng mà Ðức Chúa Trời đã sai đến thì rao truyền lời Ðức Chúa Trời</strong>, bởi Ðức Chúa Trời <strong>ban Thánh Linh cho Ngài không chừng mực</strong>.</i></span> (John 3:31-34)
 
-Như chúng ta đã nói về điều này trong đoạn trước, khuynh hướng của nhiều người là tìm câu trả lời từ người lãnh đạo tinh thần của mình. Giăng Báp-tít đã phải nỗ lực truyền đạt rằng Chúa Giê-su là đấng có thẩm quyền và giải đáp tối hậu. Chúa Giê-su là đường đi, chân lý, và nguồn sống, là con đường duy nhát đến với Đức Chúa Trời (John 14:6).
+Như chúng ta đã nói về điều này trong đoạn trước, khuynh hướng của nhiều người là tìm câu trả lời từ người lãnh đạo tinh thần của mình. Giăng Báp-tít đã phải nỗ lực truyền đạt rằng Chúa Giê-su là đấng có thẩm quyền và giải đáp tối hậu. Chúa Giê-su là đường đi, chân lý, và nguồn sống, là con đường duy nhất đến với Đức Chúa Trời (John 14:6).
 
 Chúa Giê-su đã rao truyền những gì trong "***lời Đức Chúa Trời***?" Ngài rao truyền phúc âm của Đức Chúa Giê-su Christ, cho biết rõ nhờ đâu mọi linh hồn nặng chĩu dưới gánh nặng của tội lỗi có thể được cứu rỗi. Những lời được rao truyền đó bao gồm toàn bộ chương trình cứu rỗi của Đức Chúa Trời cho nhân loại. Làm sao chúng ta có thể biết chắc Chúa Giê-su rao truyền trọn lời của Đức Chúa Trời? Chúng ta có thể chắc chắn về điều đó vì ***"Ðức Chúa Trời ban Thánh Linh cho Ngài không chừng mực."***
 
