--- a/_posts/bible-studies/2023-07-02-John.md
+++ b/_posts/bible-studies/2023-07-02-John.md
@@ -52,4 +52,8 @@ The key concepts gathered from the study of this passage: Earthly and heavenly t
 
 The key concepts gathered from the study of this passage: Ceremonial vs. true washing. I am not the Christ. The word of God. The basis for judging.
 
+##  [<u>John 4:1-22</u>]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-04-v01-22 %})
+
+The key concepts gathered from the study of this passage: The water that I will give. Secret revealed. New place of worship. You worship what you do not know.
+
 
