--- a/_posts/bible-studies-Viet/2023-07-02-Giang.md
+++ b/_posts/bible-studies-Viet/2023-07-02-Giang.md
@@ -53,4 +53,8 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Nghi
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Nước ta sẽ cho. Vào trong ánh sáng. Nơi thờ phượng mới. Thờ lạy sự các ngươi không biết.
 
+##  [<u>Giăng 4:23-34</u>]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-04-v23-34-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Tâm thần và lẽ thật. Nhận diện Đấng Christ. Đồ ăn của Chúa Giê-su.
+
 
