--- a/_posts/bible-studies/2023-07-02-John.md
+++ b/_posts/bible-studies/2023-07-02-John.md
@@ -56,4 +56,8 @@ The key concepts gathered from the study of this passage: Ceremonial vs. true wa
 
 The key concepts gathered from the study of this passage: The water that I will give. Secret revealed. New place of worship. You worship what you do not know.
 
+##  [<u>John 4:23-34</u>]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-04-v23-34 %})
+
+The key concepts gathered from the study of this passage: Worship in spirit and truth. Identifying the Messiah. Jesus’ food.
+
 
