--- a/_posts/bible-studies-Viet/John/2023-07-02-John-04-v23-34-Viet.md
+++ b/_posts/bible-studies-Viet/John/2023-07-02-John-04-v23-34-Viet.md
@@ -68,7 +68,7 @@ Chúng ta hãy đọc vài đoạn kinh thánh tương tự:
 
 Chúng ta thấy rõ ràng, nhất là trong John 6:35, là Chúa Giê-su nhấn mạnh về sự đói và khát tâm linh. Điều này càng cho thấy những người theo giáo lý tin lành khỏe mạnh và thịnh vượng cần phải xác định lại niềm tin của mình. Chúa Giê-su đã không hề hứa rằng đời mình sẽ không bao giờ phải đối diện với những thử thách về tài chánh hoặc sức khỏe. Nhưng trái lại, mục tiêu của đời sống phải là nuôi mình bằng ***"sữa thiêng liêng của đạo,"*** giúp chúng ta tăng trưởng trong sự thấu hiểu chiều sâu của sự cứu rỗi trong Đấng Christ.
 
-Nếu Chúa Giê-su xem thức ăn của Ngài là sự làm trọn sứ mạng của mình bằng cách hi sinh trên thập giá vì tội lỗi chúng ta hầu mang đến cho chúng ta sự công bình của Đức Chúa, thì thức ăn của chúng ta còn gì khác ngoài việc đặt niềm tin nơi điều Ngài đã làm cho chúng ta?
+Nếu Chúa Giê-su xem thức ăn của Ngài là sự làm trọn sứ mạng của mình bằng cách hi sinh trên thập giá vì tội lỗi chúng ta hầu mang đến cho chúng ta sự công bình của Đức Chúa Trời, thì thức ăn của chúng ta còn gì khác ngoài việc đặt niềm tin nơi điều Ngài đã làm cho chúng ta?
 
 {% include bible-study/bible-study-footer %}
 
