--- a/_posts/bible-studies/2023-07-02-John.md
+++ b/_posts/bible-studies/2023-07-02-John.md
@@ -60,4 +60,8 @@ The key concepts gathered from the study of this passage: The water that I will 
 
 The key concepts gathered from the study of this passage: Worship in spirit and truth. Identifying the Messiah. Jesus’ food.
 
+##  [<u>John 4:35-54</u>]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-04-v35-54 %})
+
+The key concepts gathered from the study of this passage: White for harvest. One sows and another reaps. Hear and know for yourselves. Prophet in own country. Healing faith?
+
 
