--- a/_posts/bible-studies-Viet/John/2023-07-02-John-04-v35-54-Viet.md
+++ b/_posts/bible-studies-Viet/John/2023-07-02-John-04-v35-54-Viet.md
@@ -1,6 +1,6 @@
 ---
 title: "John 4:35-54"
-excerpt: "Vàng sẵn cho mùa gặt. Người này gieo, người kia gặt. Nghe và biết. Tiên trong trong quê hương mình. Đức tin chữa bệnh."
+excerpt: "Vàng sẵn cho mùa gặt. Người này gieo, người kia gặt. Nghe và biết. Tiên tri trong trong quê hương mình. Đức tin chữa bệnh."
 image:
   teaser: John-teaser-Viet.jpg
 tags: [john, bible-studies]
