--- a/_posts/bible-studies-Viet/2023-07-02-Giang.md
+++ b/_posts/bible-studies-Viet/2023-07-02-Giang.md
@@ -61,4 +61,7 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Tâm
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Vàng sẵn cho mùa gặt. Người này gieo, người kia gặt. Nghe và biết. Tiên trong trong quê hương mình. Đức tin chữa bệnh.
 
+##  [<u>Giăng 5:1-47</u>]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-05-v01-47-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Phép lạ ở Bê-tết-đa. Nghe tiếng Chúa. Bạn làm lành hay dữ. Lời chứng của Đức Chúa Trời. Kinh thánh làm chứng về Chúa. Hy vọng đặt sai chỗ.
 
