--- a/_posts/bible-studies/2023-07-02-John.md
+++ b/_posts/bible-studies/2023-07-02-John.md
@@ -64,4 +64,8 @@ The key concepts gathered from the study of this passage: Worship in spirit and 
 
 The key concepts gathered from the study of this passage: White for harvest. One sows and another reaps. Hear and know for yourselves. Prophet in own country. Healing faith?
 
+## [<u>John 5:1-47</u>]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-05-v01-47 %})
+
+The key concepts gathered from the study of this passage: Healing at Bethesda. Hearing Jesus’ voice. What have you done? God’s own testimony. Scriptures testify about Jesus. Hope misplaced.
+
 
