--- a/_posts/bible-studies-Viet/2023-07-02-Giang.md
+++ b/_posts/bible-studies-Viet/2023-07-02-Giang.md
@@ -65,3 +65,7 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Vàn
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Phép lạ ở Bê-tết-đa. Nghe tiếng Chúa. Bạn làm lành hay dữ. Lời chứng của Đức Chúa Trời. Kinh thánh làm chứng về Chúa. Hy vọng đặt sai chỗ.
 
+##  [<u>Giăng 6:1-71</u>]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-06-v01-71-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Năm mẩu bánh và hai con cá. Đuổi theo thế gian. Công việc Đức Chúa Trời. Bánh hằng sống.
+
