--- a/_posts/bible-studies/2023-07-02-John.md
+++ b/_posts/bible-studies/2023-07-02-John.md
@@ -68,4 +68,7 @@ The key concepts gathered from the study of this passage: White for harvest. One
 
 The key concepts gathered from the study of this passage: Healing at Bethesda. Hearing Jesus’ voice. What have you done? God’s own testimony. Scriptures testify about Jesus. Hope misplaced.
 
+## [<u>John 6:1-71</u>]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-06-v01-71 %})
+
+The key concepts gathered from the study of this passage: Five loaves and two fish. Worldly pursuit. The work God requires. Bread of life.
 
