--- a/_posts/bible-studies-Viet/2023-07-02-Giang.md
+++ b/_posts/bible-studies-Viet/2023-07-02-Giang.md
@@ -69,3 +69,7 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Phé
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Năm mẩu bánh và hai con cá. Đuổi theo thế gian. Công việc Đức Chúa Trời. Bánh hằng sống.
 
+##  [<u>Giăng 7:1-53</u>]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-07-v01-53-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Thì giờ ta chưa đến. Vinh hiển của Chúa. Luật tối cao. Nơi ta ở. Sông nước hằng sống.
+
