--- a/_posts/bible-studies/2023-07-02-John.md
+++ b/_posts/bible-studies/2023-07-02-John.md
@@ -72,3 +72,7 @@ The key concepts gathered from the study of this passage: Healing at Bethesda. H
 
 The key concepts gathered from the study of this passage: Five loaves and two fish. Worldly pursuit. The work God requires. Bread of life.
 
+## [<u>John 7:1-53</u>]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-07-v01-53 %})
+
+The key concepts gathered from the study of this passage: My time has not yet arrived. Honor of God. The highest law. Where I am you cannot come. Rivers of living water.
+
