--- a/_posts/bible-studies-Viet/2023-07-02-Giang.md
+++ b/_posts/bible-studies-Viet/2023-07-02-Giang.md
@@ -73,3 +73,7 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Năm
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Thì giờ ta chưa đến. Vinh hiển của Chúa. Luật tối cao. Nơi ta ở. Sông nước hằng sống.
 
+##  [<u>Giăng 8:1-59</u>]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-08-v01-59-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Luật pháp truyền rằng. Tiêu chuẩn phán xét. Biết Chúa. Chết trong tội lỗi mình. Thuộc về thế gian. Khi Con Người treo lên. Lời Chúa Giê-su. Khi chưa có Áp-ra-ham.
+
