--- a/_posts/bible-studies/2023-07-02-John.md
+++ b/_posts/bible-studies/2023-07-02-John.md
@@ -76,3 +76,7 @@ The key concepts gathered from the study of this passage: Five loaves and two fi
 
 The key concepts gathered from the study of this passage: My time has not yet arrived. Honor of God. The highest law. Where I am you cannot come. Rivers of living water.
 
+## [<u>John 8:1-59</u>]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-08-v01-59 %})
+
+The key concepts gathered from the study of this passage: The law says. Standard for judgement. Knowing God. You will die in your sin. You are from below. When Jesus is lifted up. Sin and freedom. Jesus’ teaching. Before Abraham, I am.
+
