--- a/_posts/bible-studies-Viet/2023-07-02-Giang.md
+++ b/_posts/bible-studies-Viet/2023-07-02-Giang.md
@@ -77,3 +77,7 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Thì
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Luật pháp truyền rằng. Tiêu chuẩn phán xét. Biết Chúa. Chết trong tội lỗi mình. Thuộc về thế gian. Khi Con Người treo lên. Lời Chúa Giê-su. Khi chưa có Áp-ra-ham.
 
+##  [<u>Giăng 9:1-41</u>]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-09-v01-41-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Tội của ai? Ánh sáng của thế gian. Giả định sai. Môn đệ của ai? Giả định sai. Mù lòa thuộc linh.
+
