--- a/_posts/bible-studies/2023-07-02-John.md
+++ b/_posts/bible-studies/2023-07-02-John.md
@@ -80,3 +80,7 @@ The key concepts gathered from the study of this passage: My time has not yet ar
 
 The key concepts gathered from the study of this passage: The law says. Standard for judgement. Knowing God. You will die in your sin. You are from below. When Jesus is lifted up. Sin and freedom. Jesus’ teaching. Before Abraham, I am.
 
+## [<u>John 9:1-41</u>]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-09-v01-41 %})
+
+The key concepts gathered from the study of this passage: Whose sin is it? The light of the world. Faulty reasoning. Whose disciple are you? Faulty reasoning. Spiritual blindness.
+
