--- a/_posts/bible-studies/2023-07-02-John.md
+++ b/_posts/bible-studies/2023-07-02-John.md
@@ -84,3 +84,7 @@ The key concepts gathered from the study of this passage: The law says. Standard
 
 The key concepts gathered from the study of this passage: Whose sin is it? The light of the world. Faulty reasoning. Whose disciple are you? Faulty reasoning. Spiritual blindness.
 
+## [<u>John 10:1-42</u>]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-10-v01-42 %})
+
+The key concepts gathered from the study of this passage: The doorkeeper. Thieves and robbers. Who is the hired hand? Other sheep. The sin of blasphemy.
+
