--- a/_posts/bible-studies-Viet/2023-07-02-Giang.md
+++ b/_posts/bible-studies-Viet/2023-07-02-Giang.md
@@ -85,3 +85,7 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Tộ
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Người canh cửa. Quân trộm cướp. Ai là kẻ chăn thuê. Chiên khác. Lời lộng ngôn.
 
+##  [<u>Giăng 11:1-57</u>]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-11-v01-57-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Bệnh này không đến chết. Ngày và đêm. Ngươi tin điều đó chăng?
+
