--- a/_posts/bible-studies/2023-07-02-John.md
+++ b/_posts/bible-studies/2023-07-02-John.md
@@ -88,3 +88,7 @@ The key concepts gathered from the study of this passage: Whose sin is it? The l
 
 The key concepts gathered from the study of this passage: The doorkeeper. Thieves and robbers. Who is the hired hand? Other sheep. The sin of blasphemy.
 
+## [<u>John 11:1-57</u>]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-11-v01-57 %})
+
+The key concepts gathered from the study of this passage: Sickness not unto death. Day vs. night. Do you believe this?
+
