--- a/_posts/bible-studies/2023-07-02-John.md
+++ b/_posts/bible-studies/2023-07-02-John.md
@@ -92,3 +92,7 @@ The key concepts gathered from the study of this passage: The doorkeeper. Thieve
 
 The key concepts gathered from the study of this passage: Sickness not unto death. Day vs. night. Do you believe this?
 
+## [<u>John 12:1-50</u>]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-12-v01-50 %})
+
+The key concepts gathered from the study of this passage: And can it be? In hindsight. Love not the world. The judgement. Walk in the light. Blinded and hardened. Praise from men. Believe = in the light. His commandment is eternal life.
+
