--- a/_posts/bible-studies-Viet/2023-07-02-Giang.md
+++ b/_posts/bible-studies-Viet/2023-07-02-Giang.md
@@ -89,3 +89,7 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Ngư
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Bệnh này không đến chết. Ngày và đêm. Ngươi tin điều đó chăng?
 
+##  [<u>Giăng 12:1-50</u>]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-12-v01-50-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Điều này thật sao? Ôn cố tri tân. Yêu/ghét sự sống mình. Sụ phán xét. Đi trong sự sáng. Mắt mù & lòng cứng. Danh vọng hão. Tin = trong sự sáng. Mạng lệnh Chúa = Sự sống đời đời.
+
