--- a/_posts/bible-studies-Viet/John/2023-07-02-John-12-v01-50-Viet.md
+++ b/_posts/bible-studies-Viet/John/2023-07-02-John-12-v01-50-Viet.md
@@ -1,6 +1,6 @@
 ---
 title: "John 12:1-50"
-excerpt: "Điều này thật sao? Ôn cố tri tân. Yêu/ghét sự sống mình. Sụ phán xét. Đi trong sự sáng. Mắt mù & lòng cứng. Danh vọng hão. Tin = trong sự sáng. Mạng lệnh Chúa = Sự sống đời đời."
+excerpt: "Điều này thật sao? Ôn cố tri tân. Yêu/ghét sự sống mình. Sự phán xét. Đi trong sự sáng. Mắt mù & lòng cứng. Danh vọng hão. Tin = trong sự sáng. Mạng lệnh Chúa = Sự sống đời đời."
 image:
   teaser: John-teaser-Viet.jpg
 tags: [john, bible-studies]
