--- a/_posts/bible-studies/John/2023-07-02-John-12-v01-50.md
+++ b/_posts/bible-studies/John/2023-07-02-John-12-v01-50.md
@@ -78,7 +78,7 @@ This marks only the commencement of the judgment upon the prince of this world.
 <span style="color: rgb(159, 29, 33);">
 <i><sup>35</sup> Jesus replied, "<strong>The light is with you for a little while longer. Walk while you have the light, so that the darkness may not overtake you. The one who walks in the darkness does not know where he is going.  <sup>36</sup> While you have the light, believe in the light, so that you may become sons of light</strong>." When Jesus had said these things, he went away and hid himself from them.</i></span> (John 12:35-36)
 
-In an earlier section of chapter 9, Jesus states, "As long as I am in the world, I am the light of the world," while subtly implying that His time in the world is limited. Nevertheless, He also assures us that once He departs, another will take His place—the Holy Spirit.
+In an earlier section of chapter 9, Jesus states, *"As long as I am in the world, I am the light of the world,"* while subtly implying that His time in the world is limited. Nevertheless, He also assures us that once He departs, another will take His place—the Holy Spirit.
 
 The primary concept here revolves around walking in the light. Yet, now that Jesus has returned to sit at the right hand of God's throne, our walk is characterized by the influence of the Holy Spirit.
 
@@ -99,7 +99,7 @@ So, what symbolizes the "old wine" for the Jews in Jesus' time? It represents th
 
 >  "For the law was given through Moses, but grace and truth came about through Jesus Christ" (John 1:17).
 
-This notion was further reinforced by the Jews when, after healing a man born blind, they derided him and asserted, *"You are his disciple! We are disciples of Moses!"* (John 9:28).
+This notion was further reinforced by the Jews when, after a man born blind was healed by Jesus, they derided him and asserted, *"You are his disciple! We are disciples of Moses!"* (John 9:28).
 
 From this, we can infer that their reliance on the law to attain God's righteousness blinded them to accepting Jesus as their Savior.
 
@@ -110,7 +110,7 @@ From this, we can infer that their reliance on the law to attain God's righteous
 
 We often place significant importance on an individual's capacity or willingness to publicly declare their allegiance to Christ, considering it a mark of honor or evidence of their salvation. Nevertheless, it's crucial to recognize that not all public proclamations, or the absence thereof, arise from the same circumstances.
 
-Verse 43 highlights that some individuals refrain from openly acknowledging Christ because "they loved praise from men more than praise from God." Conversely, there are others who might be hesitant to profess their faith due to severe consequences that could jeopardize their safety or the well-being of themselves and their loved ones.
+Verse 43 highlights that some individuals refrain from openly acknowledging Christ because ***"they loved praise from men more than praise from God."*** Conversely, there are others who might be hesitant to profess their faith due to severe consequences that could jeopardize their safety or the well-being of themselves and their loved ones.
 
 ## BELIEVE = IN THE LIGHT
 
@@ -134,7 +134,7 @@ The New Covenant commandment is straightforward and repeatedly emphasized throug
 
 So, if you desire to obey God's commandment and carry out His work, here is what you must do:
 
-> <sup>28</sup>So then they said to him, "What must we do to accomplish the deeds God requires?"  <sup>29</sup>Jesus replied, "This is the deed God requires - to believe in the one whom he sent." (John 6:28-29)
+> <sup>28</sup>So then they said to him, "<strong>What must we do</strong> to accomplish the deeds God requires?"  <sup>29</sup>Jesus replied, "This is the deed God requires - to <strong>believe</strong> in the one whom he sent." (John 6:28-29)
 
 {% include bible-study/bible-study-footer %}
 
