--- a/_posts/bible-studies-Viet/2023-07-02-Giang.md
+++ b/_posts/bible-studies-Viet/2023-07-02-Giang.md
@@ -93,3 +93,7 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Bệ
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Điều này thật sao? Ôn cố tri tân. Yêu/ghét sự sống mình. Sụ phán xét. Đi trong sự sáng. Mắt mù & lòng cứng. Danh vọng hão. Tin = trong sự sáng. Mạng lệnh Chúa = Sự sống đời đời.
 
+##  [<u>Giăng 13:1-38</u>]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-13-v01-38-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Rửa chân. Quỉ Sa-tan vào lòng. Con người được vinh hiển. Điều răn mới. Liều sự sống?
+
