--- a/_posts/bible-studies/2023-07-02-John.md
+++ b/_posts/bible-studies/2023-07-02-John.md
@@ -96,3 +96,7 @@ The key concepts gathered from the study of this passage: Sickness not unto deat
 
 The key concepts gathered from the study of this passage: And can it be? In hindsight. Love not the world. The judgement. Walk in the light. Blinded and hardened. Praise from men. Believe = in the light. His commandment is eternal life.
 
+## [<u>John 13:1-38</u>]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-13-v01-38 %})
+
+The key concepts gathered from the study of this passage: Feet washing. Entered by Satan. When Jesus is glorified. The new commandment. Lay down your life?
+
