--- a/_posts/bible-studies/2023-07-02-John.md
+++ b/_posts/bible-studies/2023-07-02-John.md
@@ -100,3 +100,7 @@ The key concepts gathered from the study of this passage: And can it be? In hind
 
 The key concepts gathered from the study of this passage: Feet washing. Entered by Satan. When Jesus is glorified. The new commandment. Lay down your life?
 
+## [<u>John 14:1-31</u>]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-14-v01-31 %})
+
+The key concepts gathered from the study of this passage: A place for you. Knowing God. Show us the Father. Ask me anything. If you obey my commandments.
+
