--- a/_posts/bible-studies-Viet/2023-07-02-Giang.md
+++ b/_posts/bible-studies-Viet/2023-07-02-Giang.md
@@ -101,3 +101,7 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Rử
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Một chỗ cho các ngươi. Biết Cha. Chỉ Cha cho chúng tôi. Xin điều chi mặc dầu. Giữ gìn các điều răn.
 
+##  [<u>Giăng 15:1-27</u>]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-15-v01-27-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Kết quả.
+
