--- a/_posts/bible-studies/2023-07-02-John.md
+++ b/_posts/bible-studies/2023-07-02-John.md
@@ -104,3 +104,7 @@ The key concepts gathered from the study of this passage: Feet washing. Entered 
 
 The key concepts gathered from the study of this passage: A place for you. Knowing God. Show us the Father. Ask me anything. If you obey my commandments.
 
+## [<u>John 15:1-27</u>]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-15-v01-27 %})
+
+The key concepts gathered from the study of this passage: Bear fruit.
+
