--- a/_posts/bible-studies-Viet/2023-07-02-Giang.md
+++ b/_posts/bible-studies-Viet/2023-07-02-Giang.md
@@ -105,3 +105,7 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Mộ
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Kết quả.
 
+##  [<u>Giăng 16:1-33</u>]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-16-v01-33-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Sự bắt bớ đạo. Khi Đức Thánh Linh đến. Chúa tái lâm. Bất cứ điều chi.
+
