--- a/_posts/bible-studies/2023-07-02-John.md
+++ b/_posts/bible-studies/2023-07-02-John.md
@@ -108,3 +108,7 @@ The key concepts gathered from the study of this passage: A place for you. Knowi
 
 The key concepts gathered from the study of this passage: Bear fruit.
 
+## [<u>John 16:1-33</u>]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-16-v01-33 %})
+
+The key concepts gathered from the study of this passage: "Persecution. When the Spirit comes. The second coming. Whatever you ask."
+
