--- a/_posts/bible-studies-Viet/2023-07-02-Giang.md
+++ b/_posts/bible-studies-Viet/2023-07-02-Giang.md
@@ -109,3 +109,7 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Kế
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Sự bắt bớ đạo. Khi Đức Thánh Linh đến. Chúa tái lâm. Bất cứ điều chi.
 
+##  [<u>Giăng 17:1-26</u>]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-17-v01-26-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Vinh hiển. Nhìn biết Chúa. Việc của Chúa. Thuộc về Chúa. Không ai thất lạc. Biệt riêng bởi lời Chúa.
+
