--- a/_posts/bible-studies/2023-07-02-John.md
+++ b/_posts/bible-studies/2023-07-02-John.md
@@ -112,3 +112,7 @@ The key concepts gathered from the study of this passage: Bear fruit.
 
 The key concepts gathered from the study of this passage: "Persecution. When the Spirit comes. The second coming. Whatever you ask."
 
+## [<u>John 17:1-26</u>]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-17-v01-26 %})
+
+The key concepts gathered from the study of this passage: "Jesus’ glory. Knowing God. Jesus’ work. Belonging to God. None was lost. Sanctified by the Word."
+
