--- a/_posts/bible-studies-Viet/2023-07-02-Giang.md
+++ b/_posts/bible-studies-Viet/2023-07-02-Giang.md
@@ -113,3 +113,7 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Sự
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Vinh hiển. Nhìn biết Chúa. Việc của Chúa. Thuộc về Chúa. Không ai thất lạc. Biệt riêng bởi lời Chúa.
 
+##  [<u>Giăng 18:1-40</u>]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-18-v01-40-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Chẳng mất một ai.
+
