--- a/_posts/bible-studies/2023-07-02-John.md
+++ b/_posts/bible-studies/2023-07-02-John.md
@@ -116,3 +116,7 @@ The key concepts gathered from the study of this passage: "Persecution. When the
 
 The key concepts gathered from the study of this passage: "Jesus’ glory. Knowing God. Jesus’ work. Belonging to God. None was lost. Sanctified by the Word."
 
+## [<u>John 18:1-40</u>]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-18-v01-40 %})
+
+The key concepts gathered from the study of this passage: Not one is lost.
+
