--- a/_posts/bible-studies-Viet/John/2023-07-02-John-18-v01-40-Viet.md
+++ b/_posts/bible-studies-Viet/John/2023-07-02-John-18-v01-40-Viet.md
@@ -36,7 +36,7 @@ comments_locked: false
 
 Ở thời điểm này, Giăng, tác giả sách này đã nghĩ rằng đây là Chúa nói về sự an toàn về thể xác của các môn đệ. Nhưng lịch sử cho thấy tất cả đều sẽ phải bỏ mạng, nhưng không người nào mất linh hồn.
 
-Tôi xin để dành phần còn lại của sách cho bạn đọc tự tìm hiểu thêm.
+Tôi xin để dành phần còn lại của sách cho bạn đọc tự tìm hiểu thêm. Tuy nhiên, có một phần khá quan trọng trong chương 21 mà Chúa Giê-su giảo nghiệm Phi-e-rơ về tình yêu của ông cho Ngài, nhưng đoạn này đã được phân tích khá đầy đủ trong chương 15, dưới tiểu đề "Kết Quả," nên tôi thấy không cần thiết phải khai triển thêm.
 
 {% include bible-study/bible-study-footer %}
 
