--- a/_posts/bible-studies/John/2023-07-02-John-18-v01-40.md
+++ b/_posts/bible-studies/John/2023-07-02-John-18-v01-40.md
@@ -41,7 +41,7 @@ When he had said this he went back outside to the Jewish leaders and announced, 
 
 At this juncture, John's comprehension of Jesus' words implied that none of his disciples would face physical loss. However, as history later revealed, all of them would indeed lose their lives, yet none of them would experience spiritual loss.
 
-I will leave the exploration of the remainder of this chapter to the reader.
+I'll leave it to the reader to delve into the rest of this book, the Gospel of John. However, there is a significant section in Chapter 21 where Jesus questions Peter about his love, but this topic has already been discussed in Chapter 15 under the "Bear Fruit" section, so I believe it's unnecessary to delve into it further.
 
 {% include bible-study/bible-study-footer %}
 
